# cpp-illustrated-student

./: .gitignore  CMakeLists.txt
cmake/: profile_build_type.cmake
luanics/: CMakeLists.txt  test_main.cpp
luanics/crypto/: caesar_cipher.cpp  caesar_cipher.hpp  helpers.cpp  helpers.hpp  vigenere_cipher.cpp  vigenere_cipher.hpp
luanics/crypto/test/: caesar_cipher_test.cpp  helpers_test.cpp  vigenere_cipher_test.cpp
luanics/grid/: dynamic_grid.cpp  dynamic_grid.hpp  flipped_grid.cpp  flipped_grid.hpp  grid.cpp  grid.hpp  sub_grid.cpp  sub_grid.hpp
luanics/grid/test/: dynamic_grid_test.cpp  flipped_grid_test.cpp  grid_test.cpp  sub_grid_test.cpp
luanics/logging/: contract.hpp  contract_macros.hpp  error.hpp  filter.hpp  level.cpp  level.hpp  level_filter.hpp  logger.cpp  logger.hpp  logging.hpp  logging_macros.hpp  no_filter.hpp  record.hpp  simple_sink.cpp  simple_sink.hpp  simple_source.cpp  simple_source.hpp  sink.hpp  source.hpp  tuple_record.hpp  tuple_record.ipp
luanics/logging/test/: contract_test.cpp  simple_sink_test.cpp  simple_source_test.cpp  tuple_record_test.cpp
luanics/math/: operations.hpp  operations.ipp
luanics/math/test/: operations_test.cpp
luanics/meta/: detection.hpp  detection.ipp  expression_analysis.hpp  type_traits.hpp  type_traits.ipp
luanics/meta/test/: detection_test.cpp  type_traits_test.cpp
luanics/string/: conversion.cpp  conversion.hpp  enumerated_matcher.cpp  enumerated_matcher.hpp  matcher.hpp  stringify.hpp
luanics/string/test/: enumerated_matcher_test.cpp
luanics/testing/: tutorial.hpp  unit.hpp
luanics/testing/core/: augmented_reporter.hpp  augmented_reporter_decorator.cpp  augmented_reporter_decorator.hpp  component.hpp  composite.cpp  composite.hpp  error.hpp  first_fail_detector.cpp  first_fail_detector.hpp  indenting_reporter.cpp  indenting_reporter.hpp  installer.hpp  leaf.cpp  leaf.hpp  log.hpp  macros.hpp  outcome.cpp  outcome.hpp  reporter.hpp  reporter_augmenter.cpp  reporter_augmenter.hpp  result.hpp  simple_reporter.hpp  simpler_reporter.cpp  slow_excluder.cpp  slow_excluder.hpp  statement_macros.hpp  string_excluder.cpp  string_excluder.hpp  string_matcher.cpp  string_matcher.hpp
luanics/testing/core/test/: core_test.cpp  dummy_component.hpp  outcome_test.cpp  slow_excluder_test.cpp  spy_augmented_reporter.hpp  string_excluder_test.cpp  string_matcher_test.cpp
luanics/testing/tutorial/: README.md  answer_macros.hpp  instance.cpp  instance.hpp  macros.hpp  structural_macros.hpp
luanics/testing/tutorial/test/: reporter_adapter_test.cpp
luanics/testing/unit/: README.md  instance.cpp  instance.hpp  level.hpp  macros.hpp  standard_reporter.cpp  standard_reporter.hpp  structural_macros.hpp
luanics/utility/: iterators.hpp  paths.cpp  paths.hpp  streams.cpp  streams.hpp  timer.hpp  timer.ipp  tuples.hpp  tuples.ipp
luanics/utility/test/: paths_test.cpp  tuples_test.cpp
tutorial/: CMakeLists.txt  tutorial_main.cpp
tutorial/basics/: building.cpp  directives.cpp  getting_started.cpp  grid.cpp  objects.cpp  references.cpp  statements.cpp  variables.cpp
tutorial/basics/data/: comment_me_out_to_play.hpp  door_a.hpp  door_b.hpp  door_c.hpp
tutorial/more_basics/: control_flow.cpp  expressions.cpp  functions.cpp  types.cpp
